--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.5",
     "redux": "^4.0.5"
   },
   "scripts": {
